--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -20,6 +20,8 @@ gem "github-pages", "~> 204", group: :jekyll_plugins
 # If you have any plugins, put them here!
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.6"
+  # gem 'bootstrap-sass', '~> 3.4.1'
+  # gem 'sassc-rails', '>= 2.1.0'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
