--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -24,6 +24,8 @@ group :jekyll_plugins do
   gem 'sassc-rails', '>= 2.1.0'
 end
 
+gem 'bootstrap', '~> 4.3.1'
+
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
