--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Trésor 9 - Ostéopathie, Physiothérapie et Tai Chi for Health
+title: Trésor 9 - Ostéopathie, Physiothérapie, Tai Chi for Health, Naturopathie, Massothérapie
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
   Site internet pour le cabinet d'ostéopathie et de physiothérapie, Rue du Trésor 9, 2000 Neuchâtel.
